trying to update index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>Chris Richardson, PhD, Instructional Designer and Web Developer</title>
+  <title>Chris Richardson, PhD. Instructional Designer and Web Developer</title>
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="robots" content="index, follow">
