updates with php

--- a/index.html
+++ b/index.html
@@ -244,239 +244,19 @@
       <div class="page-section video-ads-bg">
         <div class="container">
           <div class="video-ads-text-cont clearfix">
-            <span class="video-ads-text">BE CREATIVE</span>
+            <span class="video-ads-text">Please allow me</span>
             <span class="video-ads-a">
-              <a class="popup-youtube" href="https://www.youtube.com/watch?v=QWYv-y0K0W0">
+              <a class="popup-youtube" href="https://www.youtube.com/watch?v=W2ynl1ux_Go">
                 <span class="icon icon-music-play-button"></span>
               </a>
             </span>
-            <span class="video-ads-text">BE YOURSELF</span>
+            <span class="video-ads-text">to introduce myself.</span>
           </div>
         </div>
       </div>
 
-      <!-- FEATURES 9 -->
-      <div class="page-section p-80-cont">
 
-        <div class="container">
-          <div class="row">
 
-            <div class="col-md-6">
-              <div class="mt-60 mb-80">
-                <h2 class="section-title">DO YOU WANT<br> TO CREATE A GOOD<br><span class="bold">WEBSITE</span>?</h2>
-              </div>
-              <div class="row">
-
-                <div class="col-md-6 col-sm-6">
-                  <div class="fes7-box mb-20 wow fadeIn">
-                    <div class="fes7-box-icon">
-                      <div class="icon icon-basic-mixer2"></div>
-                    </div>
-                    <h3>FULLY RESPONSIVE</h3>
-
-                  </div>
-                </div>
-
-                <div class="col-md-6 col-sm-6">
-                  <div class="fes7-box mb-20 wow fadeIn" data-wow-delay="200ms">
-                    <div class="fes7-box-icon">
-                      <div class="icon icon-basic-lightbulb"></div>
-                    </div>
-                    <h3>RETINA READY</h3>
-
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="row">
-
-                <div class="col-md-6 col-sm-6">
-                  <div class="fes7-box mb-20 wow fadeIn" data-wow-delay="400ms">
-                    <div class="fes7-box-icon">
-                      <div class="icon icon-basic-helm"></div>
-                    </div>
-                    <h3>UNIQUE DESIGN</h3>
-
-                  </div>
-                </div>
-
-                <div class="col-md-6 col-sm-6">
-                  <div class="fes7-box mb-20 wow fadeIn" data-wow-delay="600ms">
-                    <div class="fes7-box-icon">
-                      <div class="icon icon-basic-settings"></div>
-                    </div>
-                    <h3>EASY TO CUSTOMIZE</h3>
-
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-md-6 fes9-img-cont clearfix">
-              <div class="fes9-img-center clearfix">
-                <div class="fes9-img-center">
-                  <img src="images/fes9-black.png" alt="img" class="wow fadeInUp" data-wow-delay="150ms"
-                    data-wow-duration="1s">
-                  <img src="images/fes9-white.png" alt="img" class=" wow fadeInUp" data-wow-delay="450ms"
-                    data-wow-duration="1s">
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <!-- CALL TO ACTION  -->
-      <div class="port-view-more-cont-dark">
-        <a class="port-view-more-dark " href="contact.html">LET'S WORK TOGETHER</a>
-      </div>
-
-      <!-- BLOG 2 -->
-      <div id="blog-link" class="page-section pt-110-b-30-cont">
-        <div class="container">
-
-          <div class="mb-50">
-            <h2 class="section-title pr-0">LATEST <span class="bold">NEWS</span><a href="blog-right-sidebar.html"
-                class="section-more right">BLOG</a>
-            </h2>
-          </div>
-
-          <div class="row">
-
-            <!-- Post Item 1 -->
-            <div class="col-md-12 wow fadeIn pb-30">
-              <div class="row">
-
-                <div class="col-md-4 blog2-post-title-cont">
-                  <div class="post-prev-date-cont">
-                    <span class="blog2-date-numb">21</span><span class="blog2-month">October</span>
-                  </div>
-                  <div class="post-prev-title">
-                    <h3><a href="blog-single-sidebar-right.html">TIME FOR MINIMALISM</a></h3>
-                    <div class="post-prev-info">
-                      <a href="#">DESIGN</a><span class="slash-divider">/</span><a
-                        href="https://1.envato.market/a1gQR">JOHN DOE</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-8">
-                  <div class="blog2-post-prev-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, excepturi modi cupiditate ipsam
-                    molestiae eveniet incidunt nostrum atque alias dicta? Quos, quisquam iusto numquam dicta vel
-                    voluptatem aperiam voluptas similique!
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <!-- Post Item 2 -->
-            <div class="col-md-12 wow fadeIn pb-30">
-              <div class="row">
-
-                <div class="col-md-4 blog2-post-title-cont">
-                  <div class="post-prev-date-cont">
-                    <span class="blog2-date-numb">17</span><span class="blog2-month">August</span>
-                  </div>
-                  <div class="post-prev-title">
-                    <h3><a href="blog-single-sidebar-right.html">NEW TRENDS IN WEB</a></h3>
-                    <div class="post-prev-info">
-                      <a href="#">DESIGN</a><span class="slash-divider">/</span><a
-                        href="https://1.envato.market/a1gQR">JOHN DOE</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-8">
-                  <div class="blog2-post-prev-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, excepturi modi cupiditate ipsam
-                    molestiae eveniet incidunt nostrum atque alias dicta? Quos, quisquam iusto numquam dicta vel
-                    voluptatem aperiam voluptas similique!
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <!-- Post Item 3 -->
-            <div class="col-md-12 wow fadeIn pb-30">
-              <div class="row">
-
-                <div class="col-md-4 blog2-post-title-cont">
-                  <div class="post-prev-date-cont">
-                    <span class="blog2-date-numb">1</span><span class="blog2-month">August</span>
-                  </div>
-                  <div class="post-prev-title">
-                    <h3><a href="blog-single-sidebar-right.html">THE SOUND OF LIFE</a></h3>
-                    <div class="post-prev-info">
-                      <a href="#">DESIGN</a><span class="slash-divider">/</span><a
-                        href="https://1.envato.market/a1gQR">JOHN DOE</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-8">
-                  <div class="blog2-post-prev-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, excepturi modi cupiditate ipsam
-                    molestiae eveniet incidunt nostrum atque alias dicta? Quos, quisquam iusto numquam dicta vel
-                    voluptatem aperiam voluptas similique!
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-
-      <!-- CONTACT INFO SECTION 1 -->
-      <div id="contact-link" class="page-section p-80-cont grey-light-bg">
-        <div class="container">
-          <div class="row">
-
-            <div class="col-md-4 col-sm-6">
-              <div class="cis-cont">
-                <div class="cis-icon">
-                  <div class="icon icon-basic-map"></div>
-                </div>
-                <div class="cis-text">
-                  <h3><span class="bold">ADDRESS</span></h3>
-                  <p>790 FOLSOM AVE, SAN FRANCISCO</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="cis-cont">
-                <div class="cis-icon">
-                  <div class="icon icon-basic-mail"></div>
-                </div>
-                <div class="cis-text">
-                  <h3><span class="bold">EMAIL</span></h3>
-                  <p><a href="mailto:info@haswell.com">INFO@HASWELL.COM</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="cis-cont">
-                <div class="cis-icon">
-                  <div class="icon icon-basic-smartphone"></div>
-                </div>
-                <div class="cis-text">
-                  <h3><span class="bold">PHONE</span></h3>
-                  <p>1-800-312-212, 1-800-311-101</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
 
       <!-- CONTACT FORM -->
       <div class="page-section pt-110-b-80-cont">
@@ -525,7 +305,7 @@
 
                 </form>
                 <div class="alert alert-success hidden animated fadeIn" id="contactSuccess">
-                  <strong>Success!</strong> Your message has been sent to us.
+                  <strong>Success!</strong> Your message has been sent.
                 </div>
 
                 <div class="alert alert-danger hidden animated shake" id="contactError">
@@ -546,11 +326,14 @@
 
           <!-- Social Links -->
           <div class="footer-soc-a">
-            <a href="https://1.envato.market/a1gQR" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="https://1.envato.market/a1gQR" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://1.envato.market/a1gQR" title="Behance" target="_blank"><i class="fa fa-behance"></i></a>
-            <a href="https://1.envato.market/a1gQR" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="https://dribbble.com/abcgomel" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a>
+            <a href="https://twitter.com/CRichardsonDev" title="Twitter" target="_blank"><i
+                class="fab fa-2x fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chrisrichardson.dev/" title="Instagram" target="_blank"><i
+                class="fab fa-2x fa-instagram"></i></a>
+
+            <a href="https://www.linkedin.com/in/richardsonchrisj/" title="LinkedIn" target="_blank"><i
+                class="fab fa-2x fa-linkedin"></i></a>
+
           </div>
 
           <!-- Copyright -->
