--- a/index.html
+++ b/index.html
@@ -221,7 +221,64 @@
         </div>
 
       </div>
+      <!-- FEATURES 5 & TESTIMONIALS 1 -->
+      <div id="about" class="page-section p-110-cont">
+        <div class="container">
 
+          <div class="row">
+            <!-- TESTIMONIALS -->
+            <div class="col-md-5 pb-40">
+              <blockquote class="quote mb-0 pr-50-min-1169">
+                <p>Hi, I'm Chris. I'm a Senior Instructional Designer and Web Developer. For almost a decade, I taught
+                  Media and Cultural Studies at a small liberal arts college outside Atlanta. Now, I help people learn
+                  and collaborate more effectively by design.</p>
+              </blockquote>
+            </div>
+
+            <!-- FEATURES -->
+            <div class="col-md-7">
+
+              <div class="row">
+
+                <div class="col-md-6 col-sm-6 pb-10">
+                  <div class="fes5-box wow fadeIn">
+                    <h3>INSTRUCTIONAL DESIGN</h3>
+                    <p>Sed ut perspiciatis unde omnis iste nat eror acus antium que</p>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-sm-6 pb-10">
+                  <div class="fes5-box wow fadeIn" data-wow-delay="200ms">
+                    <h3>WEB DEVELOPMENT </h3>
+                    <p>Sed ut perspiciatis unde omnis iste nat eror acus antium que</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="row">
+
+                <div class="col-md-6 col-sm-6 pb-10">
+                  <div class="fes5-box wow fadeIn" data-wow-delay="400ms">
+                    <h3>DATA SCIENCE</h3>
+                    <p>Sed ut perspiciatis unde omnis iste nat eror acus antium que</p>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-sm-6 pb-10">
+                  <div class="fes5-box wow fadeIn" data-wow-delay="600ms">
+                    <h3>BATMAN</h3>
+                    <p>Sed ut perspiciatis unde omnis iste nat eror acus antium que</p>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
       <!-- FEATURES 7 -->
       <div id="about-us-link" class="page-section grey-light-bg clearfix">
         <div class="fes7-img-cont col-md-5">
@@ -234,7 +291,8 @@
       <!-- VIEW MORE PROJECTS  -->
       <div class="port-view-more-cont">
         <a class="port-view-more" target="_blank" href="https://github.com/richardsonchrisj">VIEW GITHUB
-          REPOSITORIES</a>
+          REPOSITORIES</br>
+          <i class="fab fa-5x fa-github-alt"></i></a>
       </div>
       <!-- END PORTFOLIO SECTION 1 -->
 
@@ -328,12 +386,14 @@
           <div class="footer-soc-a">
             <a href="https://twitter.com/CRichardsonDev" title="Twitter" target="_blank"><i
                 class="fab fa-2x fa-twitter"></i></a>
+            <a href="https://github.com/richardsonchrisj" title="GitHub" target="_blank"><i
+                class="fab fa-2x fa-github-alt"></i></a>
             <a href="https://www.instagram.com/chrisrichardson.dev/" title="Instagram" target="_blank"><i
                 class="fab fa-2x fa-instagram"></i></a>
-
+            <a href="https://www.kaggle.com/richardsonchrisj" title="Kaggle" target="_blank"><i
+                class="fab fa-2x fa-kaggle"></i></a>
             <a href="https://www.linkedin.com/in/richardsonchrisj/" title="LinkedIn" target="_blank"><i
-                class="fab fa-2x fa-linkedin"></i></a>
-
+                class="fab fa-2x fa-linkedin-in"></i></a>
           </div>
 
           <!-- Copyright -->
