updated for live site

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 
 <head>
-  <title>Chris Richardson, PhD. Instructional Designer and Web Developer</title>
+  <title>Chris Richardson, PhD</title>
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="Instructional Design, Teaching, Learning, Curriculum, Web Development">
-  <meta name="description" content="Chris Richardson, PhD. Portfolio site.">
+  <meta name="description" content="Chris Richardson, PhD">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -142,26 +142,26 @@
                           </a>
                         </li>
 
-                        <!-- MENU ITEM -->
+                        <!-- MENU ITEM
                         <li>
                           <a href="#about-us-link">
                             <div class="main-menu-title">ABOUT ME</div>
                           </a>
                         </li>
 
-                        <!-- MENU ITEM -->
-                        <li>
+                       MENU ITEM -->
+                        <!-- <li>
                           <a href="#portfolio-link">
                             <div class="main-menu-title">PORTFOLIO</div>
                           </a>
-                        </li>
+                        </li> -->
 
                         <!-- MENU ITEM -->
-                        <li>
+                        <!-- <li>
                           <a href="#contact-link">
                             <div class="main-menu-title">CONTACT</div>
                           </a>
-                        </li>
+                        </li> --> 
 
                       </ul>
 
